<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_back">Back</string>
    <string name="nombre">Nombre</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Digite un nombre de usuario</string>
    <string name="invalid_password">Digite una contraseña</string>
    <string name="login_failed">"Credenciales Incorrectas"</string>
    <string name="title_activity_register">RegisterActivity</string>


    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="agregar_curso">Agregar curso</string>
    <string name="nombre_del_curso">Nombre del curso</string>
    <string name="c_digo">Código</string>
    <string name="horas_semanales">Horas semanales</string>
    <string name="cr_ditos">Créditos</string>
    <string name="nombre_curso">Nombre del curso</string>
    <string name="c_digo_del_curso">Código del curso</string>
    <string name="cr_ditos_horas_semanales">Créditos - Horas semanales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreProfesor">Nombre</string>
    <string name="cedulaProfesor">Cédula</string>
    <string name="telefonoProfesor">Teléfono</string>
    <string name="emailProfesor">email</string>
    <string name="agregar_profesor">Agregar Profesor</string>
    <string name="nombre_del_curso_item">Nombre del curso</string>
    <string name="c_digo_xxx">Código: XXX</string>
    <string name="_3_cr_ditos_4_hrs_semana">3 créditos · 4 hrs/semana</string>
</resources>