<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etNombreCurso"
            android:layout_width="375dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/nombre_curso"
            android:inputType="text" />

        <EditText
            android:id="@+id/etCreditos"
            android:layout_width="375dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/cr_ditos"
            android:inputType="number" />

        <EditText
            android:id="@+id/etHorasSemanales"
            android:layout_width="375dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/horas_semanales"
            android:inputType="number" />

    </LinearLayout>
</ScrollView>
